--- a/package.json
+++ b/package.json
@@ -1,31 +1,92 @@
 {
-    "name": "obsidian-svelte-starter",
+    "name": "obsidian-spice",
     "version": "1.0.3",
-    "description": "A plugin development template for devs who want to use svelte in Obsidian.",
+    "description": "A circuit simulator plugin for Obsidian's markdown editor, canvas mode, and excalidraw.",
     "main": "main.js",
     "scripts": {
+        "test": "npx jest src",
+        "testing": "npx jest src --watch",
         "lint": "eslint . --ext .ts",
         "dev": "npm run lint && vite build --watch",
         "build": "npx svelte-check && vite build",
         "bumpversion": "node version-bump.mjs && git add manifest.json versions.json"
     },
-    "keywords": [],
-    "author": "Quorafind",
+    "keywords": [
+        "obsidian",
+        "plugin",
+        "markdown",
+        "canvas",
+        "circuit",
+        "simulator",
+        "spice",
+        "ngspice",
+        "js",
+        "javascript",
+        "typescript",
+        "svelte",
+        "vite",
+        "sveltekit",
+        "simulator",
+        "simulation",
+        "electrical",
+        "electronic",
+        "electronics",
+        "circuit",
+        "circuitry",
+        "electrical engineering",
+        "electronic engineering",
+        "electronics engineering",
+        "circuit engineering",
+        "canvas mode",
+        "canvas",
+        "markdown",
+        "excalidraw"
+    ],
+    "author": "Conner Ohnesorge",
     "devDependencies": {
+        "@babel/plugin-transform-modules-commonjs": "^7.20.11",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-typescript": "^7.18.6",
+        "@popperjs/core": "^2.11.6",
         "@sveltejs/vite-plugin-svelte": "^1.0.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/svelte": "^3.2.2",
+        "@testing-library/user-event": "^14.4.3",
         "@tsconfig/svelte": "^3.0.0",
+        "@types/jest": "^29.4.0",
         "@types/node": "^16.11.6",
         "@typescript-eslint/eslint-plugin": "5.32.0",
         "@typescript-eslint/parser": "5.32.0",
+        "babel-jest": "^29.4.3",
+        "babel-plugin-transform-vite-meta-env": "^1.0.3",
+        "babel-polyfill": "^6.26.0",
         "builtin-modules": "3.3.0",
+        "classnames": "^2.3.2",
         "eslint": "^8.21.0",
         "eslint-plugin-svelte3": "^4.0.0",
-        "obsidian": "latest",
+        "flowbite": "^1.6.3",
+        "flowbite-svelte": "^0.29.13",
+        "jest": "^29.4.3",
+        "jest-transform-stub": "^2.0.0",
+        "obsidian": "^1.1.1",
         "svelte": "^3.49.0",
         "svelte-check": "^2.8.0",
+        "svelte-jester": "^2.3.2",
         "svelte-preprocess": "^4.10.7",
+        "tailwindcss": "^3.2.7",
+        "test-jest": "^1.0.1",
+        "ts-jest": "^29.0.5",
         "tslib": "2.4.0",
         "typescript": "4.7.4",
         "vite": "^3.0.0"
-    }
+    },
+    "dependencies": {
+        "svelte-add": "^2022.12.0-9.0",
+        "svelte-loader": "^3.1.6"
+    },
+    "moduleFileExtensions": [
+        "js",
+        "ts",
+        "svelte"
+    ]
 }
