added tab icons and coloring system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "inlineSources": true,
-        "module": "ESNext",
+        "module": "commonjs",
         "target": "ES6",
         "allowJs": true,
         "noImplicitAny": true,
