--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "A circuit simulator plugin for Obsidian's markdown editor, canvas mode, and excalidraw.",
     "main": "main.js",
     "scripts": {
-        "test": "npx jest src",
-        "testing": "npx jest src --watch",
+        "test": "jest",
+        "testing": "jest --watch",
         "lint": "eslint . --ext .ts",
         "dev": "npm run lint && vite build --watch",
         "build": "npx svelte-check && vite build",
@@ -44,6 +44,7 @@
     ],
     "author": "Conner Ohnesorge",
     "devDependencies": {
+        "@babel/core": "^7.20.12",
         "@babel/plugin-transform-modules-commonjs": "^7.20.11",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.18.6",
@@ -64,14 +65,12 @@
         "classnames": "^2.3.2",
         "eslint": "^8.21.0",
         "eslint-plugin-svelte3": "^4.0.0",
-        "flowbite": "^1.6.3",
-        "flowbite-svelte": "^0.29.13",
         "jest": "^29.4.3",
         "jest-transform-stub": "^2.0.0",
         "obsidian": "^1.1.1",
         "svelte": "^3.49.0",
         "svelte-check": "^2.8.0",
-        "svelte-jester": "^2.3.2",
+        "svelte-icon": "^2.0.0",
         "svelte-preprocess": "^4.10.7",
         "tailwindcss": "^3.2.7",
         "test-jest": "^1.0.1",
@@ -81,8 +80,11 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@babel/plugin-syntax-import-assertions": "^7.20.0",
+        "nodemon": "^2.0.20",
         "svelte-add": "^2022.12.0-9.0",
-        "svelte-loader": "^3.1.6"
+        "svelte-loader": "^3.1.6",
+        "ts-node": "^10.9.1"
     },
     "moduleFileExtensions": [
         "js",
