--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Build
         id: build
         run: |
-          yarn
-          yarn add fs
-          yarn run build --if-present
+          npm i 
+          npm install fs
+          npm run build --if-present
           mkdir ${{ env.PLUGIN_NAME }}
           cp main.js manifest.json ${{ env.PLUGIN_NAME }}
           zip -r ${{ env.PLUGIN_NAME }}.zip ${{ env.PLUGIN_NAME }}
