--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
           echo "::set-output name=tag_name::$(git tag --sort version:refname | tail -n 1)"
       - name: Create Release
         id: create_release
-        uses: actions/setup-node
+        uses: actions/setup-node@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ github.ref }}
@@ -77,7 +77,7 @@ jobs:
           id: upload-css
       - name: Upload styles.css
         id: upload-css
-        uses: actions/setup-node
+        uses: actions/setup-node@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
