--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,5 +5,7 @@ check_task:
   node_modules_cache:
     folder: node_modules
     fingerprint_script: cat package-lock.json
-    populate_script: npm run test
+    populate_script: |
+    npm i
+    npm run build
   test_script: npm run test
