--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "eslint . --ext .ts",
         "dev": "npm run lint && vite build --watch",
         "build": "npx svelte-check && vite build",
-        "bumpversion": "node version-bump.mjs && git add manifest.json versions.json"
+        "bumpversion": "node version-bump.mjs && git add manifest.json versions.json",
+        "built": "npm i && npm run dev"
     },
     "keywords": [
         "obsidian",
