--- a/.github/workflows/sync_kanban.yml
+++ b/.github/workflows/sync_kanban.yml
@@ -1,23 +1,19 @@
 # author: Conner Ohnesorge 
 # Syncronizes the kanban tracking the entirety of the project onto github projects.
-
-name: Add PR to project
+# Intended to sync the Github Project As a database to add to on a build
+name: Add Skill's and Categorized
+# makes the name `Add Skills's And Categorized`
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
-  pull_request:
-
+    page_build: 
+        types: [created]
 jobs:
-  track_pr:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get project data
-        env:
-          GITHUB_TOKEN: ${{ secrets.YOUR_TOKEN }}
-          ORGANIZATION: YOUR_ORGANIZATION
-          PROJECT_NUMBER: YOUR_PROJECT_NUMBER
-        run: |
-          echo "incomplete github action"
-        
+    remove_skills:
+        runs-on: ubuntu-latest
+        steps:
+        - name: get-skills-
+          env:
+            GITHUB_TOKEN: ${{ secrets.YOUR_TOKEN }}
+            ORGANIZATION: YOUR_ORGANIZATION
+            PROJECT_NUMBER: YOUR_PROJECT_NUMBER
+          run: |
+            echo "incomplete github action"
